--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql: true
 
-logging.level.org.springframework.web: DEBUG
-logging.level.org.hibernate: ERROR
+#logging.level.org.springframework.web: DEBUG
+#logging.level.org.hibernate: ERROR
