--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql: true
 
+# spring boot starter logging configuration
 #logging.level.org.springframework.web: DEBUG
 #logging.level.org.hibernate: ERROR
