#16 两个数据源, 还有问题, 再说...

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,22 @@
 spring.view.prefix: /WEB-INF/jsp/
 spring.view.suffix: .jsp
 
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=root
-spring.datasource.password=admin
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.show-sql: true
+#spring.datasource.url=jdbc:mysql://localhost:3306/test
+#spring.datasource.username=root
+#spring.datasource.password=admin
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.jpa.show-sql: true
+
+# Configure Two DataSources...
+datasource.primary.url=jdbc\:oracle\:thin\:@localhost\:1521\:orcl
+datasource.primary.username=test
+datasource.primary.password=test
+datasource.primary.driver-class-name=oracle.jdbc.OracleDriver
+
+datasource.secondary.url=jdbc:mysql://localhost:3306/test
+datasource.secondary.username=root
+datasource.secondary.password=admin
+datasource.secondary.driver-class-name=com.mysql.jdbc.Driver
 
 # spring boot starter logging configuration
 #logging.level.org.springframework.web: DEBUG
