--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,11 @@ datasource.primary.username=test
 datasource.primary.password=test
 datasource.primary.driver-class-name=oracle.jdbc.OracleDriver
 
+#datasource.primary.url=jdbc\:sqlserver\://127.0.0.1\:1433
+#datasource.primary.username=sa
+#datasource.primary.password=
+#datasource.primary.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
 datasource.secondary.url=jdbc:mysql://localhost:3306/test
 datasource.secondary.username=root
 datasource.secondary.password=admin
