--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,18 +1,41 @@
 #pay attation of logFile
-log4j.rootLogger=INFO, console, logFile
+log4j.rootLogger=INFO, console, logFile, dailyRollingFile, rollingFile
 log4j.additivity.org.apache=true
 
+#console log
 log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.Threshold=INFO
+log4j.appender.console.Threshold=DEBUG
 log4j.appender.console.ImmediateFlush=true
 log4j.appender.console.Target=System.err
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
+#log4j.appender.console.layout.ConversionPattern=%-d{yyyy-MM-dd HH\:mm\:ss,SSS} [%p]-[%M]-[%c]--[%t]---[%m]%n
 log4j.appender.console.layout.ConversionPattern=[%-5p] %d(%r) --> [%t] %l: %m %x %n
 
+#file log
 log4j.appender.logFile=org.apache.log4j.FileAppender
-log4j.appender.logFile.Threshold=WARN
+log4j.appender.logFile.Threshold=INFO
 log4j.appender.logFile.ImmediateFlush=true
 log4j.appender.logFile.Append=true
-log4j.appender.logFile.File=D:/log.txt
+log4j.appender.logFile.File=D:/jsplogs/log.log
 log4j.appender.logFile.layout=org.apache.log4j.PatternLayout
-log4j.appender.logFile.layout.ConversionPattern=[%-5p] %d(%r) --> [%t] %l: %m %x %n
+log4j.appender.logFile.layout.ConversionPattern=%-d{yyyy-MM-dd HH\:mm\:ss,SSS} [%p]-[%c] %m%n
+
+#rolling file
+log4j.appender.rollingFile=org.apache.log4j.RollingFileAppender
+log4j.appender.rollingFile.Threshold=DEBUG
+log4j.appender.rollingFile.File=D:/jsplogs/rollinglog.log
+log4j.appender.rollingFile.Append=true
+log4j.appenile.rollingFile.MaxFileSize=1000KB
+log4j.appenile.rollingFile.MaxBackupIndex=10
+log4j.appender.rollingFile.layout=org.apache.log4j.PatternLayout
+log4j.appender.rollingFile.layout.ConversionPattern=%-d{yyyy-MM-dd HH\:mm\:ss,SSS} [%p]-[%c] %m%n
+
+#daily rolling file
+log4j.appender.dailyRollingFile=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.dailyRollingFile.Threshold=DEBUG
+log4j.appender.dailyRollingFile.File=D:/jsplogs/dailyrollinglog.log
+log4j.appender.dailyRollingFile.ImmediateFlush=true
+log4j.appender.dailyRollingFile.Append=true
+log4j.appender.dailyRollingFile.DatePattern=.yyyy-MM-dd
+log4j.appender.dailyRollingFile.layout=org.apache.log4j.PatternLayout
+log4j.appender.dailyRollingFile.layout.ConversionPattern=%-d{yyyy-MM-dd HH\:mm\:ss,SSS} [%p]-[%c] %m%n 
