--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.view.prefix: /WEB-INF/jsp/
-spring.view.suffix: .jsp
-
+#default datasource configuration
 #spring.datasource.url=jdbc:mysql://localhost:3306/test
 #spring.datasource.username=root
 #spring.datasource.password=admin
