--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,11 +15,23 @@ datasource.primary.url=jdbc\:sqlserver\://127.0.0.1\:1433
 datasource.primary.username=sa
 datasource.primary.password=
 datasource.primary.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+datasource.primary.alias=primary
+datasource.primary.protoTypeCount=2
+datasource.primary.simultaneousBuildThrottle=10
+datasource.primary.minimumConnectionCount=2
+datasource.primary.maximumConnectionCount=50
+datasource.primary.houseKeepingSleepTime=90000
 
 datasource.secondary.url=jdbc:mysql://localhost:3306/test
 datasource.secondary.username=root
 datasource.secondary.password=admin
 datasource.secondary.driver-class-name=com.mysql.jdbc.Driver
+datasource.secondary.alias=secondary
+datasource.secondary.protoTypeCount=2
+datasource.secondary.simultaneousBuildThrottle=10
+datasource.secondary.minimumConnectionCount=2
+datasource.secondary.maximumConnectionCount=50
+datasource.secondary.houseKeepingSleepTime=90000
 
 # spring boot starter logging configuration
 #logging.level.org.springframework.web: DEBUG
