--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,15 +6,15 @@
 #spring.jpa.show-sql: true
 
 # Configure Two DataSources...
-#datasource.primary.url=jdbc\:oracle\:thin\:@localhost\:1521\:orcl
-#datasource.primary.username=test
-#datasource.primary.password=test
-#datasource.primary.driver-class-name=oracle.jdbc.OracleDriver
+datasource.primary.url=jdbc\:oracle\:thin\:@localhost\:1521\:orcl
+datasource.primary.username=test
+datasource.primary.password=test
+datasource.primary.driver-class-name=oracle.jdbc.OracleDriver
 
-datasource.primary.url=jdbc\:sqlserver\://127.0.0.1\:1433
-datasource.primary.username=sa
-datasource.primary.password=
-datasource.primary.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#datasource.primary.url=jdbc\:sqlserver\://127.0.0.1\:1433
+#datasource.primary.username=sa
+#datasource.primary.password=
+#datasource.primary.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 datasource.primary.alias=primary
 datasource.primary.protoTypeCount=2
 datasource.primary.simultaneousBuildThrottle=10
