--- a/pom.xml
+++ b/pom.xml
@@ -74,11 +74,8 @@
 			<artifactId>ehcache</artifactId>
 			<version>2.10.0</version>
 		</dependency>
-		<!-- <dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc14</artifactId> 
-			<version>10.2.0.4.0</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>com.oracle</groupId> <artifactId>ojdbc14</artifactId> 
+			<version>10.2.0.4.0</version> </dependency> -->
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>sqljdbc4</artifactId>
@@ -93,6 +90,11 @@
 			<groupId>com.cloudhopper.proxool</groupId>
 			<artifactId>proxool-cglib</artifactId>
 			<version>0.9.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
 		</dependency>
 	</dependencies>
 </project>
