--- a/pom.xml
+++ b/pom.xml
@@ -97,4 +97,16 @@
 			<version>1.3.1</version>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<!-- 跳过单元测试打包 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
